Phase 3-4: Dokumentation und MIGRATION_NOTES.md aktualisiert